@@ -1,10 +1,6 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 50erobot-gentoo.el 94 RMD160 2eb8cd92982b9d13871ee99636108e04ca77e731 SHA1 de92c7eb474e2e5514c5a88c60080f890103b667 SHA256 bc44d7751e9d910986d785c715f7d8690f039b9f6f70db85b703bd5c473338ad
-MD5 0d8a269cc6fb35db21d045517f72332c files/50erobot-gentoo.el 94
-RMD160 2eb8cd92982b9d13871ee99636108e04ca77e731 files/50erobot-gentoo.el 94
-SHA256 bc44d7751e9d910986d785c715f7d8690f039b9f6f70db85b703bd5c473338ad files/50erobot-gentoo.el 94
 AUX 51erobot-gentoo.el 232 RMD160 64dcb900338738407bbf32d47f7192a2484a3f84 SHA1 ac3fbc92d7f1a7c913602f0ff0fc0a63f00cb51e SHA256 75e2f7f292689b146ae9066565ec27dfaedea3c95b68d3922ef3538ef2c0fc43
 MD5 df4d5ddda48ed0705578538a2071b812 files/51erobot-gentoo.el 232
 RMD160 64dcb900338738407bbf32d47f7192a2484a3f84 files/51erobot-gentoo.el 232
@@ -14,32 +10,25 @@ MD5 242236086417ce804faf00526cd680e0 files/erobot-2.1.0-fix-interactive.patch 52
 RMD160 cb38ee3e3ed0c32006ba7d4d8a45af02f1dcbf7d files/erobot-2.1.0-fix-interactive.patch 520
 SHA256 87d0023dde8e647e325b2e30e059cba9fe4855b9300e065e13c3afc4b800486f files/erobot-2.1.0-fix-interactive.patch 520
 DIST erobot-2.1.0.tar.bz2 8748 RMD160 1b364abe29b75b2bd83079879fd8f767d6d75226 SHA1 7bd540a212b537ef630103e0438c10e5e47ae8fa SHA256 36c02702406ed15f8f67e148a7b098006e5cde2e1fde9f6e748e7fb22a03197c
-EBUILD erobot-2.1.0-r1.ebuild 562 RMD160 35a7d91ded30c469c1b88b0c7a57b1feb09a001f SHA1 3ef14dd8f8a29c21d085bf2f9f82f411af2a97e8 SHA256 95b496cd9e19af346d898c4bb5f9b987ea8040dc9f8b43579d327086d21dd51e
-MD5 c7c59d45df1236a8951c3ba70efa975f erobot-2.1.0-r1.ebuild 562
-RMD160 35a7d91ded30c469c1b88b0c7a57b1feb09a001f erobot-2.1.0-r1.ebuild 562
-SHA256 95b496cd9e19af346d898c4bb5f9b987ea8040dc9f8b43579d327086d21dd51e erobot-2.1.0-r1.ebuild 562
-EBUILD erobot-2.1.0.ebuild 460 RMD160 649276d315fe1d5338afdd0cb718cd725b1c5b06 SHA1 2c07cfb4433f3e8ee3c266c8ab12e27df459c527 SHA256 4f2e04b35b26ae20c53fe73f4901eeb4234e1d75cfcd83f572234b170c77cc6a
-MD5 fd72fbac1f2f2ff218c70a236c76af2b erobot-2.1.0.ebuild 460
-RMD160 649276d315fe1d5338afdd0cb718cd725b1c5b06 erobot-2.1.0.ebuild 460
-SHA256 4f2e04b35b26ae20c53fe73f4901eeb4234e1d75cfcd83f572234b170c77cc6a erobot-2.1.0.ebuild 460
-MISC ChangeLog 1336 RMD160 a70d6590db6c6d2f1e7f212909eb872b6fbf9164 SHA1 b5ed2b82dff84e891279903e1bcfdb8851470844 SHA256 e5d19098a7b7754c05ee4e6f718cba477a37a71ad490291e3108d636c00e5d4b
-MD5 81429357c552e5bcbc01e268941d737f ChangeLog 1336
-RMD160 a70d6590db6c6d2f1e7f212909eb872b6fbf9164 ChangeLog 1336
-SHA256 e5d19098a7b7754c05ee4e6f718cba477a37a71ad490291e3108d636c00e5d4b ChangeLog 1336
+EBUILD erobot-2.1.0-r1.ebuild 559 RMD160 74f650de485210843056aa2badc9abcbdcf2e2df SHA1 0a1c39f7131b3a0b2904c3f6755704c8c18122f2 SHA256 8994e8e44bd51a3785f64058c371c2a36fb93287d9cf0d1e1cf1fceb5f49b566
+MD5 c7705883dc0ffa39ab1c4f7765d41813 erobot-2.1.0-r1.ebuild 559
+RMD160 74f650de485210843056aa2badc9abcbdcf2e2df erobot-2.1.0-r1.ebuild 559
+SHA256 8994e8e44bd51a3785f64058c371c2a36fb93287d9cf0d1e1cf1fceb5f49b566 erobot-2.1.0-r1.ebuild 559
+MISC ChangeLog 1501 RMD160 9549171b1efae0d31bc89ae0467bdbc88b4c488d SHA1 29c798eb07eb6516c69ad7849e404694ec1e0020 SHA256 2693528a6b1d28791fbf6da20d88dfee9b07fc7c4534e72f1f86629538ec2cd3
+MD5 a81be745bd70d944b6bf70cfd1df9e6a ChangeLog 1501
+RMD160 9549171b1efae0d31bc89ae0467bdbc88b4c488d ChangeLog 1501
+SHA256 2693528a6b1d28791fbf6da20d88dfee9b07fc7c4534e72f1f86629538ec2cd3 ChangeLog 1501
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata.xml 158
-MD5 0c51f135a4fc295c6391a43a1debd321 files/digest-erobot-2.1.0 235
-RMD160 c0e409c944acdd7ff46f28c83b92b1ac10d3e80d files/digest-erobot-2.1.0 235
-SHA256 d0e22ecbe2caa669bfdaebf4284dcca302c9385cd3f426967a380cb72be7adf6 files/digest-erobot-2.1.0 235
 MD5 0c51f135a4fc295c6391a43a1debd321 files/digest-erobot-2.1.0-r1 235
 RMD160 c0e409c944acdd7ff46f28c83b92b1ac10d3e80d files/digest-erobot-2.1.0-r1 235
 SHA256 d0e22ecbe2caa669bfdaebf4284dcca302c9385cd3f426967a380cb72be7adf6 files/digest-erobot-2.1.0-r1 235
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGiz1xNQqtfCuFneMRAmJsAJ96Xat0NO9i2NbiX5Cyw9kpOyr5xgCfZMlo
-GwJgMudgX82HxfEhvOnVyUY=
-=DOiw
+iD8DBQFHSacVOeoy/oIi7uwRAol6AJoCa5FGo+1vqXxJ53pz9I1t5it9IACcCyta
+cJKaCEicwCoDl70nJdi62gk=
+=you9
 -----END PGP SIGNATURE-----
