@@ -1,16 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/erobot/Attic/erobot-2.1.0.ebuild,v 1.9 2007/04/21 08:36:19 ulm Exp $
-
-inherit elisp
-
-IUSE=""
-
-DESCRIPTION='Battle-bots for Emacs!'
-HOMEPAGE="http://www.geocities.com/kensanata/emacs-games.html"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc x86"
-
-SITEFILE=50erobot-gentoo.el
