@@ -1,6 +1,0 @@
-
-;;; erobot site-lisp configuration
-
-(add-to-list 'load-path "@SITELISP@")
-(require 'erobot)
-
