@@ -1,3 +1,0 @@
-MD5 e009d9f5394d4bd907c06a91c11d7de0 erobot-2.1.0.tar.bz2 8748
-RMD160 1b364abe29b75b2bd83079879fd8f767d6d75226 erobot-2.1.0.tar.bz2 8748
-SHA256 36c02702406ed15f8f67e148a7b098006e5cde2e1fde9f6e748e7fb22a03197c erobot-2.1.0.tar.bz2 8748
