@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/erobot
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/erobot/ChangeLog,v 1.11 2007/07/04 06:25:47 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/erobot/ChangeLog,v 1.12 2007/11/25 16:46:55 ulm Exp $
+
+  25 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -files/50erobot-gentoo.el,
+  -erobot-2.1.0.ebuild, erobot-2.1.0-r1.ebuild:
+  Stable on amd64, bug #195512. Remove old.
 
   04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
   erobot-2.1.0-r1.ebuild:
